# HPC_GPGPU

./: .gitignore  .gitmodules  LICENSE  README.md
examples/000_MatrixMul/: CMakeLists.txt  README.md  REAME.md  compute.glsl  fragment.glsl  main.cpp  vertex.glsl
examples/002_VC4CL_MatrixMul/: CMakeLists.txt  README.md  main.cpp  matmul.cl
examples/003_Heterogeneous_Assembly/: CMakeLists.txt  README.md  cpu_ops.s  main.c  qpu_kernel.qasm
examples/004_Heterogeneous_MatrixMul/: CMakeLists.txt  README.md  cpu_matmul_neon.s  main.c  qpu_matmul.qasm
examples/005_MultiCore_NEON_Intrinsics/: CMakeLists.txt  README.md  main.c  matmul_neon_omp.c  matmul_neon_omp.h  repomix-output.xml
examples/006_Zero_Copy_Shared_Memory/: CMakeLists.txt  README.md  mailbox.c  mailbox.h  main.c
